changes to run tests with H2